feat: T-152 add Open Graph and Twitter card metadata

--- a/frontend/user/index.html
+++ b/frontend/user/index.html
@@ -5,12 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="MiMind - 专业心理教练平台，帮助你探索内心、了解自己" />
     <meta name="theme-color" content="#c97b63" />
+    <meta name="robots" content="index,follow" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="MiMind" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/svg+xml" href="/icons/icon-192.svg" />
     <link rel="apple-touch-icon" href="/icons/icon-192.svg" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="MiMind" />
+    <meta property="og:locale" content="zh_CN" />
+    <meta property="og:title" content="MiMind - AI 心理教练与疗愈工具" />
+    <meta property="og:description" content="量表评估、互动测试、AI 心理教练与疗愈工具，一站式支持你的情绪与成长。" />
+    <meta property="og:url" content="/" />
+    <meta property="og:image" content="/og-card.svg" />
+    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="MiMind - AI 心理教练与疗愈工具" />
+    <meta name="twitter:description" content="量表评估、互动测试、AI 心理教练与疗愈工具，一站式支持你的情绪与成长。" />
+    <meta name="twitter:image" content="/og-card.svg" />
     <title>MiMind</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
